added note regarding 2.0

--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
         <div class="row">
           <div class="col-md-8">
             <h2>The CCI Toolbox is Open Source.<br>
-              Version 1.0 is now available.<br>Includes installers for <br>Windows, Linux & Mac.
+              <br>Version 1.0 includes installers for <br>Windows, Linux & Mac.
             </h2><br>
             <p style="color:#FFCCCC">
               Whether you're on Mac, Windows or Linux, how you use the <br>toolbox is pretty much the same.
@@ -1218,6 +1218,14 @@
               <p style="color:#FFCCCC">
                   Details on the Cate system requirements, installation, <br>and configuration can be found
                   <a href="http://cate.readthedocs.io/en/latest/user_manual/um_setup.html" target="_blank">here</a>.
+              </p>
+              <p style="color:#FFCCCC">
+                  <strong>Please note that <span style="color:White">Cate 2.0</span> is on its way!</strong><br/>
+                  It now supports many more ECVs and includes a lot of new features.<br/>
+                  It's installation is now even simpler.<br/>
+                  There is only a single installer that will take care of everything.<br/>
+                  Get a Cate 2.0 pre-release
+                  <a href="https://github.com/CCI-Tools/cate-desktop/releases" target="_blank">here</a>.
               </p>
           </div>
           <div class="col-md-4 text-center ">
