1. added quick start video 2. refer to latest download version 3. said, that we support all ECVs

--- a/index.html
+++ b/index.html
@@ -1028,6 +1028,7 @@
               The toolbox works by mashing ECV data into a Common Data Model.
               <br>Users operate on this model, then visualise the results.
             </p>
+            <h3><a href="https://youtu.be/w0ZEK4aIC9I" style="color:black">See for yourself!</a></h3>
           </div>
         </div>
       </div>
@@ -1144,92 +1145,43 @@
     <section class="contact text-center" style="color:#ffffff;background-color:#CB3E68">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
-            <h2>The CCI Toolbox is Open Source.<br>
-              <br>Version 1.0 includes installers for <br>Windows, Linux & Mac.
-            </h2><br>
-            <p style="color:#FFCCCC">
-              Whether you're on Mac, Windows or Linux, how you use the <br>toolbox is pretty much the same.
-              Follow the Github download<br> instructions below, then let's talk about
-              <a class="js-scroll-trigger" href="#documentation">documentation</a>.
-            </p>
-          <div>
-            <ul class="timeline">
+            <div class="col-md-8">
+                <h2>The CCI Toolbox is Open Source.</h2>
+                <h2>We provide installers for<br/>Windows, Linux & Mac</h2>
 
-              <!-- 1 -->
-              <li>
-            		<div class="direction-r">
-            			<div class="flag-wrapper">
-            				<span class="flag">Download Installers</span>
-            				<!--<span class="time-wrapper"><span class="time">From GitHub</span></span>-->
-            			</div>
-            			<div class="desc">
-                            Download version 1.0:<br/>
-                            &#8226;&nbsp;&nbsp;Cate <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/cate-1.0.0-MacOSX-x86_64.sh">Core</a> & <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/Cate.Desktop-1.0.0.dmg">Desktop</a> for Mac<br/>
-                            &#8226;&nbsp;&nbsp;Cate <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/cate-1.0.0-Linux-x86_64.sh">Core</a> & <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/cate-desktop-1.0.0-x86_64.AppImage">Desktop</a> for Linux<br/>
-                            &#8226;&nbsp;&nbsp;Cate <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/cate-1.0.0-Windows-x86_64.exe">Core</a> & <a href="https://github.com/CCI-Tools/cate/releases/download/v1.0.0/Cate.Desktop.Setup.1.0.0.exe">Desktop</a> for Windows<br/>
-                            Or visit Cate's <a href="https://github.com/CCI-Tools/cate/releases" target="_blank">releases page</a><br/>
-                            on GitHub for older versions.
-                        </div>
-            		</div>
-            	</li>
+                <p style="color:#FFCCCC">Installers for <span style="color: white;">Cate Desktop</span>, the CCI Toolbox' graphical user interface,<br/>
+                  are available for the Windows, Linux & Mac operating systems:<br/>
+                </p>
 
-              <!-- 2 -->
-            	<li>
-            		<div class="direction-l">
-            			<div class="flag-wrapper">
-            				<span class="flag">Install Cate Core</span>
-            				<!--<span class="time-wrapper"><span class="time">On your computer</span></span>-->
-            			</div>
-<!--
-            		    <div class="desc">Mac & Linux users do this in a terminal window:<br/>
-                          <code style="color:white;font-style:normal;background-color:#4C4C4C;">
-                            $ bash cate-&lt;version&gt;-&lt;platform&gt;.sh</code><br/>
-                            Windows users just double-click.
-                        </div>
--->
-                        <div class="desc">
-                          Please read and follow the<br/><a href="http://cate.readthedocs.io/en/latest/user_manual/um_setup.html#installing-cate-core" target="_blank">installation instructions</a>!
-                        </div>
+                <p style="color:#FFCCCC">
+                  <strong>Windows</strong> users get
+                    <a href="https://github.com/CCI-Tools/cate-desktop/releases" target="_blank"><code>cate-desktop-setup-&lt;v&gt;.exe</code></a>
+                    and double-click.<br/>
+                    <strong>Mac</strong> users get
+                    <a href="https://github.com/CCI-Tools/cate-desktop/releases" target="_blank"><code>cate-desktop-&lt;v&gt;.dmg</code></a>
+                    and double-click.<br/>
+                    <strong>Linux</strong> users get
+                    <a href="https://github.com/CCI-Tools/cate-desktop/releases" target="_blank"><code>cate-desktop-&lt;v&gt;.AppImage</code></a>
+                    and execute in a terminal window.
+                </p>
 
-            		 </div>
-            	</li>
+                <p style="color:#FFCCCC">Users exclusively interested in the CCI Toolbox's<br/>
+                  <span style="color: white;">Command Line Interface</span>
+                  or its <span style="color: white;">Python package</span><br/>
+                  can do a Python 3.6 source install from the
+                  <a href="https://github.com/CCI-Tools/cate" target="_blank">GitHub repository</a><br/>
+                  or install into a Python 3.6 Anaconda/Miniconda environment using<br/><code>conda install -c ccitools -c conda-forge cate-cli</code>.
+                </p>
 
-            	<!-- 3 -->
-              <li>
-                  <div class="direction-r">
-            			<div class="flag-wrapper">
-            				<span class="flag">Install Cate Desktop</span>
-            				<!--<span class="time-wrapper"><span class="time">On your computer</span></span>-->
-            			</div>
-<!--
-            			<div class="desc">Execute the installer. No bash scripts this time if you're on Mac or Linux.
-                            Note, you need to install Cate Core first!
-                        </div>
--->
-                    <div class="desc">Execute the installer, that's it.<br/>
-                      Remember, you need to install Cate Core first.<br/>
-                      More <a href="http://cate.readthedocs.io/en/latest/user_manual/um_setup.html#installing-cate-desktop" target="_blank">here</a>.
-                    </div>
-            	  </div>
-               </li>
-             </ul>
-           </div>
-              <p style="color:#FFCCCC">
-                  Details on the Cate system requirements, installation, <br>and configuration can be found
-                  <a href="http://cate.readthedocs.io/en/latest/user_manual/um_setup.html" target="_blank">here</a>.
-              </p>
-              <p style="color:#FFCCCC">
-                  <strong>Please note that <span style="color:White">Cate 2.0</span> is on its way!</strong><br/>
-                  It now supports many more ECVs and includes a lot of new features.<br/>
-                  It's installation is now even simpler.<br/>
-                  There is only a single installer that will take care of everything.<br/>
-                  Get a Cate 2.0 pre-release
-                  <a href="https://github.com/CCI-Tools/cate-desktop/releases" target="_blank">here</a>.
-              </p>
-          </div>
+                <p style="color:#FFCCCC">
+                    Details on the Cate system requirements, installation, <br>and configuration can be found
+                    <a href="http://cate.readthedocs.io/en/latest/user_manual/um_setup.html" target="_blank">here</a>.
+                    Now, let's talk about <a class="js-scroll-trigger" href="#documentation">documentation</a>.
+                </p>
+
+            </div>
           <div class="col-md-4 text-center ">
-            <img alt="githubLogo" src="img/Octocat.png" width="300" style="padding:0px"/><br>
+            <img alt="githubLogo" src="img/Octocat.png" width="300" style="padding:0px"/><br/>
           </div>
         </div>
       </div>
@@ -1271,7 +1223,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-            <h2>CCI data sources in<br/>CCI Toolbox v1.0</h2>
+            <h2>CCI data sources in<br/>the CCI Toolbox</h2>
             <p style="color:#F4B12A"></p>
             <p style="color:#FFCCCC">
               All ESA CCI datasets published through the
@@ -1280,17 +1232,12 @@
               <a class="js-scroll-trigger" href="#interfaces">Python API</a>
               and
               <a class="js-scroll-trigger" href="#interfaces">Command Line Interface</a>.
-              <br/><br/>
-              For <text style="color:White;">version 1.0</text> of the CCI Toolbox
-              we have limited the number of CCI datasets available
-              to the Cate Desktop, our
-              <a class="js-scroll-trigger" href="#interfaces">Graphical User Interface</a>.
-              Cate Desktop currently supports the following CCI datasets - Aerosol CCI (x6),
-              Cloud CCI (x6), Fire CCI (x1),
-              Ocean Colour CCI (x28),
-              Ozone CCI (x2),
-              Soil Moisture CCI (x3), and
-              Sea Surface Temperature CCI (x1).<br> More are on the way.
+            </p>
+            <p style="color:#FFCCCC">
+              Note, that in <span style="color:white">Cate Desktop</span>, the <a class="js-scroll-trigger" href="#interfaces">Graphical User Interface</a>,
+              some datasets do not have an obvious graphical representation, e.g. the display of datasets
+              on a 2D map or 3D globe is naturally limited to the ones having a spatial coverage.
+          </p>
           </div>
           <div class="col-md-4">
               <img alt="githubLogo" src="img/if_stack_1287510.png" width="230" />
