--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
             <div class="header-content" style="color:#ffffff">
               <h1>CCI Toolbox<br>
                 <div style="color:#F4B12A">
-                  The Climate Analysis Toolbox of the <br>ESA Climate Change Initiative.
+                  The Climate Analysis Toolbox of the <br>ESA Climate Change Initiative. Curry!
                 </div>
               </div>
             </div>
