--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- End Google Tag Manager -->
 
   <!-- Invitation pop-up. Once per day per user.-->
-  <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=a30a352a45f4a' async=true></script> 
+  <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=a30a352a45f4a' async=true></script>
 
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 
@@ -979,6 +979,9 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#news">News</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#download">Download</a>
           </li>
           <li class="nav-item">
@@ -1006,7 +1009,7 @@
             <div class="header-content" style="color:#ffffff">
               <h1>CCI Toolbox<br>
                 <div style="color:#F4B12A">
-                  The Climate Analysis Toolbox of the <br>ESA Climate Change Initiative. Curry!
+                  The Climate Analysis Toolbox of the <br>ESA Climate Change Initiative.
                 </div>
               </div>
             </div>
@@ -1028,7 +1031,7 @@
               The toolbox works by mashing ECV data into a Common Data Model.
               <br>Users operate on this model, then visualise the results.
             </p>
-            <h3><a href="https://youtu.be/w0ZEK4aIC9I" style="color:black">See for yourself!</a></h3>
+            <!--<h3><a href="https://youtu.be/w0ZEK4aIC9I" style="color:black">See for yourself!</a></h3>-->
           </div>
         </div>
       </div>
@@ -1127,6 +1130,44 @@
         </div>
       </div>
     </section>
+
+
+
+    <!-- Section separator -->
+
+    <section class="sectionSeparatorPink text-center" id="news" style="color:#FDC436">
+      <div class="container ">
+        <div class="row">
+          <div class="col-md-4 text-center" style="padding:50px;color:white;background-color:rgba(144,196,54,0.7)">
+            <h2>News</h2>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- News panel -->
+
+    <section class="contact" style="color:#ffffff;background-color:#90C436">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h2>Stay tuned.<br>Read the news.<br></h2>
+            <p style="color:#F4B12A"></p>
+            <p style="color:#000000">
+              Subscribe to our CCI Toolbox
+              <a href="https://app.popt.in/APIRequest/click/5dd3059a2aac6">news</a>
+              and <br>we'll let you know when big things happen.
+              <br><br>
+              Read our <a href="newsletter/ESA_CCI_Toolbox_Newsletter_Issue_01.pdf">Newsletter #1</a> [20.12.2017]
+            </p>
+          </div>
+          <div class="col-md-4">
+              <img alt="githubLogo" src="img/news.png" width="230" />
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <!-- Section separator -->
 
@@ -1270,12 +1311,6 @@
               <a href="https://groups.google.com/forum/#!forum/cci-tools" target="_blank">User Forum</a> and<br/>
               consider reporting trouble and bugs in Cate's <a href="https://github.com/CCI-Tools/cate/issues" target="_blank">Issue Tracker</a>.<br>
               We'll then take it from there.
-              <br><br>
-              Subscribe to our CCI Toolbox
-              <a href="https://app.popt.in/APIRequest/click/5dd3059a2aac6">news</a>
-              and <br>we'll let you know when big things happen.
-              <br><br>
-              Read our <a href="newsletter/ESA_CCI_Toolbox_Newsletter_Issue_01.pdf">Newsletter #1</a> [20.12.2017]
             </p>
           </div>
           <div class="col-md-4">
