--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@
     <section class="sectionSeparatorPink text-center" id="news" style="color:#FDC436">
       <div class="container ">
         <div class="row">
-          <div class="col-md-4 text-center" style="padding:50px;color:white;background-color:rgba(144,196,54,0.7)">
+          <div class="col-md-4 text-center" style="padding:50px;color:white;background-color:rgba(74,138,88,0.7)">
             <h2>News</h2>
           </div>
         </div>
@@ -1147,7 +1147,7 @@
 
     <!-- News panel -->
 
-    <section class="contact" style="color:#ffffff;background-color:#90C436">
+    <section class="contact" style="color:#ffffff;background-color:#4A8A58">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
@@ -1442,7 +1442,7 @@ It provides
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-            <iframe height="380" src="https://www.youtube.com/embed/7chA5AHQO1I" width="675px"></iframe>
+            <iframe height="281" src="https://www.youtube.com/embed/7chA5AHQO1I" width="502px"></iframe>
           </div>
           <div class="col-md-4">
             <h2><text style="color:#000000"> Made for users, by users.
@@ -1473,7 +1473,7 @@ It provides
             </p>
           </div>
           <div class="col-md-6">
-            <iframe height="380" src="https://www.youtube.com/embed/I0-ZyiIbCc8" width="675px"></iframe>
+            <iframe height="281" src="https://www.youtube.com/embed/I0-ZyiIbCc8" width="502px"></iframe>
           </div>
       </div>
     </section>
