Added video section stub.

--- a/index.html
+++ b/index.html
@@ -1320,6 +1320,29 @@
       </div>
     </section>
 
+    <!-- Support panel -->
+
+    <section class="tutorials"  style="color:#ffffff;background-color:#0F3B54">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h2>Get first-class advice.</h2>
+            <p class="text-muted">
+              Text video tutorials
+<!--
+              <a href="https://groups.google.com/forum/#!forum/cci-tools" target="_blank">User Forum</a> and<br/>
+              consider reporting trouble and bugs in Cate's <a href="https://github.com/CCI-Tools/cate/issues" target="_blank">Issue Tracker</a>.<br>
+              We'll then take it from there.
+-->
+            </p>
+          </div>
+          <div class="col-md-4">
+              <img alt="githubLogo" src="img/video.png" width="240" />
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Feedback panel -->
 
     <section class="contact" id="feedback" style="color:#ffffff;background-color:#0F2C43">
