Included quick start video iframe.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
     <!DOCTYPE html>
-    <html lang="en">
+    <html lang="en" xmlns="http://www.w3.org/1999/html">
 
     <head>
         <!-- Google Tag Manager -->
@@ -1344,7 +1344,11 @@
                 <div class="col-md-8">
                     <h2>Get first-class advice.</h2>
                     <p class="text-muted">
-                        Video tutorials coming soon.
+                        Take a plunge into the CCI Toolbox and watch our tutorials.</br>
+                    </p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/w0ZEK4aIC9I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></br>
+                    <p class="text-muted">
+                        This quick start video will introduce you to the fundamentals of using the CCI Toolbox.</br>
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -1480,13 +1484,11 @@
                     </h2>
                     <p class="text-muted">
                         <text style="color:#000000">
-                            Climate data users are embedded in the CCI Toolbox team, working alongside the software
-                            developers.<br><br>
+                            Climate data users are embedded in the CCI Toolbox team, working alongside the software developers.
+                            <br><br>
                             These "Champion Users" - led by Rainer Hollman of Deutscher Wetterdienst (DWD) - define, drive
-                            and validate the
-                            CCI Toolbox development direction. Here, Rainer talks about his work on the Cloud Essential
-                            Climate Variable (ECV)
-                            dataset production in the Climate Change Initiative (CCI).
+                            and validate the CCI Toolbox development direction. Here, Rainer talks about his work on the Cloud Essential
+                            Climate Variable (ECV) dataset production in the Climate Change Initiative (CCI).
                         </text>
                     </p>
                 </div>
@@ -1536,10 +1538,9 @@
     <footer style="color:#808080;background-color:#000000">
         <div class="container">
             <p style="font-size:13px !important"><br>&copy; 2017 CCI Toolbox Project Partners. All Rights Reserved.
-                The CCI Toolbox software is provided under the <a style="color:#aaaaaa"
-                                                                  href="https://opensource.org/licenses/MIT"
-                                                                  target="_blank">
-                    MIT License</a>.</p>
+                The CCI Toolbox software is provided under the
+                <a style="color:#aaaaaa" href="https://opensource.org/licenses/MIT" target="_blank"> MIT License</a>.
+            </p>
             <div>
                 <img src="img/partnersInvert2.png" width="810" style="padding:10px">
             </div>
