Minor text optimisations.

--- a/index.html
+++ b/index.html
@@ -1262,8 +1262,7 @@
                         <a href="http://cate.readthedocs.io/en/latest/architecture.html" target="_blank">CCI Toolbox Architecture</a>,
                         <a href="http://cate.readthedocs.io/en/latest/developer_guide.html" target="_blank">Developer Guide</a> and
                         <a href="http://cate.readthedocs.io/en/latest/detailed_design.html" target="_blank">Detailed Design</a>.
-                        We'll have
-                            <a href="#tutorials">YouTube training videos</a> for you soon. But not yet. We're still working on those.
+                        And we'll have more <a href="#tutorials">YouTube training videos</a> for you soon.
                     </p>
                 </div>
                 <div class="col-md-4">
