Appearance of ESA videos improved.

--- a/index.html
+++ b/index.html
@@ -1475,7 +1475,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <iframe height="281" src="https://www.youtube.com/embed/7chA5AHQO1I" width="502px"></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/7chA5AHQO1I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
                 <div class="col-md-4">
                     <h2>
@@ -1515,7 +1515,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <iframe height="281" src="https://www.youtube.com/embed/I0-ZyiIbCc8" width="502px"></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/I0-ZyiIbCc8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
